# GPAD-Aug

./: Appointments.ipynb  Appointments.py  Appointmentsv2.ipynb  Training.ipynb  main.py  pyproject.toml  ref_data.csv  requirements.txt
appts_dashboard/: README.md  requirements.txt
appts_dashboard/src/: app.py
appts_dashboard/src/data/: data_processing.py
appts_dashboard/src/utils/: helpers.py
appts_dashboard/src/visualizations/: plots.py
